# mobilePTX

./: .gitignore  LICENSE.txt  README.rst  generate_yolo_regions.py  get_bounding_boxes.py  positive_videos.json  run_pnb.py  run_pnb_old.py  run_pnb_only_yolo.py  run_ptx.py  run_tflite_pnb.py  run_tflite_ptx.py  setup.cfg  sme_region_labels.csv  sparse.pt  stride_2_100_iter.pt
notebooks/: CIFAR10-Experiment.ipynb  LinearPolar-Video-Transform.ipynb  Rename_Info.ipynb  YOLO-Clip-Classification.ipynb  YOLO-to-CoreML.ipynb  convolving_kernels_together.ipynb  exploring_onsd.ipynb  exploring_pnb.ipynb  investigating_activation_optimization.ipynb  run_bamc_preprocessor.ipynb  train_bamc.ipynb  train_sparse_conv3d_interactive.ipynb  visualize_filters_keras.ipynb  visualize_prediction_sparse_codes.ipynb
notebooks/saved_models/: sparse_conv3d_model-pleural_clips1_5x15x15-11-10-21.pt
ptx_tensorflow/best_classifier.pt/: keras_metadata.pb  saved_model.pb
ptx_tensorflow/sparse.pt/: keras_metadata.pb  saved_model.pb
sparse_coding_torch/: sparse_model.py  utils.py
sparse_coding_torch/onsd/: classifier_model.py  generate_images_to_label.py  generate_tflite.py  generate_tflite_valid.py  load_data.py  logistic_regression.py  onsd_regression.py  run_tflite.py  train_MLP.py  train_classifier.py  train_nerve_slice_all_vids.py  train_positional_classifier.py  train_regression_model.py  train_sparse_model.py  train_unet.py  train_valid_classifier.py  unet_models.py  video_loader.py
sparse_coding_torch/pnb/: classifier_model.py  load_data.py  (+6 more)
yolov4/: detect.py  get_bounding_boxes.py
(+30 files in other folders)
