[metadata]
name = sparse_coding_torch
author = Christopher J. MacLellan
author-email = christopher.maclellan@drexel.edu
summary = A library for doing sparse coding using Keras
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://gitlab.cci.drexel.edu/teachable-ai-lab/sparse_coding_torch
project_urls = 
    Documentation = https://gitlab.cci.drexel.edu/teachable-ai-lab/sparse_coding_torch
    Source Code = https://gitlab.cci.drexel.edu/teachable-ai-lab/sparse_coding_torch
license = MIT
license_file = LICENSE.txt
classifier = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy
keywords = "machine-learning"

[files]
packages =
    sparse_coding_torch

[bdist_wheel]
universal=1

[aliases]
test=pytest
